# Xcode-AI-Proxy

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  restart.sh  server.py  start.sh  stop.sh
docs/: ollama-Capabilities.md  wflixu:Xcode-AI-Proxy- Xcode AI Proxy - Python 版本，解决 Xcode 中无法直接添加智谱 GLM、Kimi 和 DeepSeek 模型的问题.webloc  智谱AI HTTP API 调用.md  通义千问API参考.md
docs/AIHubMix/: AI SDK - AIHubMix Provider.md  README.md  README.zh.md  快速开始.md  模型管理API.md
docs/Gemini/: Gemini API Cookbook.md  Gemini API.md  Gemini Models.md
