[project]
name = "xcode-ai-proxy"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.118.0",
    "httpx==0.28.1",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.37.0",
]
